--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.0-rc.15",
     "vue": "^2.6.10",
+    "vue-i18n": "^8.10.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.0"
   },
